logs/2023-12-26-20-43-50/serverbuild.log
ftpServer.c: In function ‘ftpserver_start_pasv_data_conn’:
ftpServer.c:75:9: warning: implicit declaration of function ‘sendfile’ [-Wimplicit-function-declaration]
   75 |         sendfile(session->sock_data,fd,NULL,size);
      |         ^~~~~~~~
ftpServer.c: In function ‘ftpserver_retr’:
ftpServer.c:420:24: warning: ‘return’ with a value, in function returning void
  420 |                 return -1;
      |                        ^
ftpServer.c:408:6: note: declared here
  408 | void ftpserver_retr(UserSession *session,char *filename)
      |      ^~~~~~~~~~~~~~
In file included from ftpServer.h:24,
                 from ftpServer.c:11:
ftpServer.c: In function ‘ftpserver_push’:
ftpServer.c:442:26: error: called object ‘__xpg_basename’ is not a function or function pointer
  442 |         char* basename = basename(filename);
      |                          ^~~~~~~~
ftpServer.c:442:15: note: declared here
  442 |         char* basename = basename(filename);
      |               ^~~~~~~~
ftpServer.c:457:24: warning: ‘return’ with a value, in function returning void
  457 |                 return -1;
      |                        ^
ftpServer.c:440:6: note: declared here
  440 | void ftpserver_push(UserSession *session,char* filename)
      |      ^~~~~~~~~~~~~~
ftpServer.c: In function ‘ftpserver_delet’:
ftpServer.c:510:24: warning: ‘return’ with a value, in function returning void
  510 |                 return -1;
      |                        ^
ftpServer.c:498:6: note: declared here
  498 | void ftpserver_delet(UserSession *session, char *filename)
      |      ^~~~~~~~~~~~~~~
